--- a/Latent Dirichlet Allocation (LDA) Topic modeling.ipynb
+++ b/Latent Dirichlet Allocation (LDA) Topic modeling.ipynb
@@ -137,7 +137,7 @@
    ],
    "source": [
     "from nltk.corpus import stopwords\n",
-    "#nltk.download(\"stopwords\") #solo una vez y primero de todo descargar las stopwrods\n",
+    "#nltk.download(\"stopwords\") #only once and first of all download the stopwrods\n",
     "stopwords_en = stopwords.words(\"english\")\n",
     "print(stopwords_en[:5])"
    ]
